add unorder list for footer, add favicon

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -8,13 +8,14 @@
   <link href="https://db.onlinewebfonts.com/c/f1fcc5aed1e20fc0cdb9f8a7573625bd?family=Integral+CF+Regular"
     rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
-  <title>Demo HTML</title>
+  <title>Shop.co</title>
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
 </head>
 
 <body>
   <!-- SIGN UP START -->
   <div class="sign-up">
-    <p class="text">Sign up and get 20% off to your first order. <a href="/" class="link link-secondary">Sign Up Now</a>
+    <p class="text">Sign up and get 20% off to your first order. <a href="javascript:void(0)" class="link link-secondary">Sign Up Now</a>
     </p>
     <img src="./assets/images/off.svg" alt="off">
   </div>
@@ -23,19 +24,19 @@
   <!-- HEADER START -->
   <header class="container">
     <nav class="nav-bar">
-      <h1 class="nav-logo"><a class="link-primany" href="#">SHOP.CO</a></h1>
+      <h1 class="nav-logo"><a class="link-primany" href="javascript:void(0)">SHOP.CO</a></h1>
       <ul class="nav">
-        <li class="nav-item"><a class="link-primany" href="">Shop</a></li>
-        <li class="nav-item"><a class="link-primany" href="">On Sale</a></li>
-        <li class="nav-item"><a class="link-primany" href="">New Arrivals</a></li>
-        <li class="nav-item"><a class="link-primany" href="">Brand</a></li>
+        <li class="nav-item"><a class="link-primany" href="javascript:void(0)">Shop</a></li>
+        <li class="nav-item"><a class="link-primany" href="javascript:void(0)">On Sale</a></li>
+        <li class="nav-item"><a class="link-primany" href="javascript:void(0)">New Arrivals</a></li>
+        <li class="nav-item"><a class="link-primany" href="javascript:void(0)">Brand</a></li>
       </ul>
       <form>
         <input class="nav-search" type="text" name="search" placeholder="Search for products...">
       </form>
       <div>
-        <a class="link-primany" href="/"> <img src="./assets/images/cart.svg" alt="cart"></a>
-        <a class="link-primany" href="/"> <img src="./assets/images/login.svg" alt="login"></a>
+        <a class="link-primany" href="javascript:void(0)"> <img src="./assets/images/cart.svg" alt="cart"></a>
+        <a class="link-primany" href="javascript:void(0)"> <img src="./assets/images/login.svg" alt="login"></a>
       </div>
     </nav>
   </header>
@@ -54,15 +55,13 @@
         </button>
         <div class="info">
           <p class="info-num">200+ <span class="info-desc">International Brands </span></p>
-          <img src="./assets/images/line.png" alt="">
-          <p class="info-num">2,000+ <span class="info-desc"> High-Quality Products </span></p>
-          <img src="./assets/images/line.png" alt="">
+          <p class="info-num banner-num">2,000+ <span class="info-desc"> High-Quality Products </span></p>
           <p class="info-num">30,000+ <span class="info-desc">Happy Customers</span></p>
         </div>
       </div>
       <div>
-        <img class="icon-left" src="./assets/images/star.svg" alt="">
-        <img class="icon-right" src="./assets/images/star.svg" alt="">
+        <img class="icon-left" src="./assets/images/star.svg" alt="star">
+        <img class="icon-right" src="./assets/images/star.svg" alt="star">
       </div>
     </div>
   </section>
@@ -236,21 +235,21 @@
       <div class="browes">
         <div>
           <p class="browes-desc">Causal</p>
-          <img class="browse-img" src="./assets/images/casual.png" alt="">
+          <img class="browse-img" src="./assets/images/casual.png" alt="casual">
         </div>
         <div>
           <p class="browes-desc">Formal</p>
-          <img class="browse-img" src="./assets/images/formal.png" alt="">
+          <img class="browse-img" src="./assets/images/formal.png" alt="formal">
         </div>
       </div>
       <div class="browes">
         <div>
           <p class="browes-desc">Party</p>
-          <img class="browse-img" src="./assets/images/party.png" alt="">
+          <img class="browse-img" src="./assets/images/party.png" alt="party">
         </div>
         <div>
           <p class="browes-desc">Gym</p>
-          <img class="browse-img" src="./assets/images/gym.png" alt="">
+          <img class="browse-img" src="./assets/images/gym.png" alt="gym">
         </div>
       </div>
     </section>
@@ -261,17 +260,19 @@
       <div class="customer">
         <h2 class="title fourth-title">OUR HAPPY CUSTOMERS</h2>
         <div>
-          <a href="/"><img class="prev-btn" src="./assets/images/next-icon.svg" alt="prev-icon"></a>
-          <a href="/"><img class="next-btn" src="./assets/images/prev-icon.svg" alt="next-icon"></a>
+          <a href="javascript:void(0)"><img class="prev-btn" src="./assets/images/next-icon.svg" alt="prev-icon"></a>
+          <a href="javascript:void(0)"><img class="next-btn" src="./assets/images/prev-icon.svg" alt="next-icon"></a>
         </div>
       </div>
       <div class="customer-list">
         <div class="customer-item">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
+          <div class="customer-item__img">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+          </div>
           <p class="customer-desc">Sarah M.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
               alt="blue-check-mark"></p>
           <p class="customer-comments">
@@ -279,11 +280,13 @@
             elegant dresses, every piece I've bought has exceeded my expectations.”</p>
         </div>
         <div class="customer-item">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
+          <div class="customer-item__img">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+          </div>
           <p class="customer-desc">Alex K.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
               alt="blue-check-mark"></p>
           <p class="customer-comments">"Finding clothes that align with my personal style
@@ -292,11 +295,13 @@
             and occasions.”</p>
         </div>
         <div class="customer-item">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
-          <img src="./assets/images/star-full.svg" alt="star-full">
+          <div class="customer-item__img">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+            <img src="./assets/images/star-full.svg" alt="star-full">
+          </div>
           <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
               alt="blue-check-mark"></p>
           <p class="customer-comments">
@@ -312,57 +317,57 @@
   <!-- FOOTER START -->
   <footer>
     <fieldset class="footer">
-      <legend class="footer-legend">
+      <legend class="container footer-legend">
         <h2 class="title fiveth-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
         <div class="footer-contact">
           <input class="contact-email" type="text" name="email" placeholder="Enter your email address">
           <button class="btn-contact">Subscribe to Newsletter</button>
         </div>
       </legend>
-      <div class="footer-nav">
+      <div class="footer-nav container">
         <div class="footer-item">
           <h3 class="footer-logo">shop.co</h3>
           <p class="footer-decs">We have clothes that suits your style and which you’re proud to wear. From women to
             men.</p>
           <img class="footer-icon" src="./assets/images/social.svg" alt="">
         </div>
-        <div class="footer-item">
+        <ul class="footer-item">
           <h3 class="footer-nav-head">Company</h3>
-          <a class="footer-link" href="">About</a>
-          <a class="footer-link" href="">Features</a>
-          <a class="footer-link" href="">Works</a>
-          <a class="footer-link" href="">Career</a>
-        </div>
-        <div class="footer-item">
+          <li><a class="footer-link" href="javascript:void(0)">About</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Features</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Works</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Career</a></li>
+        </ul>
+        <ul class="footer-item">
           <h3 class="footer-nav-head">Help</h3>
-          <a class="footer-link" href="">Customer Support</a>
-          <a class="footer-link" href="">Delivery Details</a>
-          <a class="footer-link" href="">Terms & Conditions</a>
-          <a class="footer-link" href="">Privacy Policy</a>
-        </div>
-        <div class="footer-item">
+          <li><a class="footer-link" href="javascript:void(0)">Customer Support</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Delivery Details</a></li>
+          <li> <a class="footer-link" href="javascript:void(0)">Terms & Conditions</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Privacy Policy</a></li>
+        </ul>
+        <ul class="footer-item">
           <h3 class="footer-nav-head">FAQ</h3>
-          <a class="footer-link" href="">Account</a>
-          <a class="footer-link" href="">Manage Deliveries</a>
-          <a class="footer-link" href="">Orders</a>
-          <a class="footer-link" href="">Payments</a>
-        </div>
-        <div class="footer-item">
+          <li><a class="footer-link" href="javascript:void(0)">Account</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Manage Deliveries</a></li>
+          <li> <a class="footer-link" href="javascript:void(0)">Orders</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Payments</a></li>
+        </ul>
+        <ul class="footer-item">
           <h3 class="footer-nav-head">Resources</h3>
-          <a class="footer-link" href="">Free eBooks</a>
-          <a class="footer-link" href="">Development Tutoria</a>
-          <a class="footer-link" href="">How to - Blog</a>
-          <a class="footer-link" href="">Youtube Playlist</a>
-        </div>
+          <li><a class="footer-link" href="javascript:void(0)">Free eBooks</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Development Tutoria</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">How to - Blog</a></li>
+          <li><a class="footer-link" href="javascript:void(0)">Youtube Playlist</a></li>
+        </ul>
       </div>
       <div class="copyright">
         <p>Shop.co © 2000-2023, All Rights Reserved</p>
         <div>
-          <a href=""><img class="icon-payment" src="./assets/images/visa.svg" alt=""></a>
-          <a href=""> <img class="icon-payment" src="./assets/images/badge.svg" alt=""></a>
-          <a href=""><img class="icon-payment" src="./assets/images/paypal.svg" alt=""></a>
-          <a href=""><img class="icon-payment" src="./assets/images/ip-pay.svg" alt=""></a>
-          <a href=""><img class="icon-payment" src="./assets/images/g-pay.svg" alt=""></a>
+          <a href="javascript:void(0)"><img class="icon-payment" src="./assets/images/visa.svg" alt="visa"></a>
+          <a href="javascript:void(0)"> <img class="icon-payment" src="./assets/images/badge.svg" alt="badge"></a>
+          <a href="javascript:void(0)"><img class="icon-payment" src="./assets/images/paypal.svg" alt="paypal"></a>
+          <a href="javascript:void(0)"><img class="icon-payment" src="./assets/images/ip-pay.svg" alt="ip-pay"></a>
+          <a href="javascript:void(0)"><img class="icon-payment" src="./assets/images/g-pay.svg" alt="g-pay"></a>
         </div>
       </div>
     </fieldset>
