apply BEM for page

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- SIGN UP START -->
   <div class="sign-up">
-    <p class="text">Sign up and get 20% off to your first order. <a href="javascript:void(0)" class="link link-secondary">Sign Up Now</a>
+    <p class="sign-up__text">Sign up and get 20% off to your first order. <a href="javascript:void(0)" class="sign-up__link link-secondary">Sign Up Now</a>
     </p>
     <img src="./assets/images/off.svg" alt="off">
   </div>
@@ -47,21 +47,21 @@
     <div class="banner-item">
       <div>
         <h2 class="title primary-title">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
-        <p class="banner-content">Browse through our diverse range of meticulously crafted garments, designed to bring
+        <p class="banner-item__content">Browse through our diverse range of meticulously crafted garments, designed to bring
           out
           your individuality and cater to your sense of style</p>
         <button class="btn btn-primary">
           Shop now
         </button>
-        <div class="info">
-          <p class="info-num">200+ <span class="info-desc">International Brands </span></p>
-          <p class="info-num banner-num">2,000+ <span class="info-desc"> High-Quality Products </span></p>
-          <p class="info-num">30,000+ <span class="info-desc">Happy Customers</span></p>
+        <div class="banner-item__info">
+          <p class="banner-item__info-num">200+ <span class="banner-item__info-desc">International Brands </span></p>
+          <p class="banner-item__info-num banner-item__info-box">2,000+ <span class="banner-item__info-desc"> High-Quality Products </span></p>
+          <p class="banner-item__info-num">30,000+ <span class="banner-item__info-desc">Happy Customers</span></p>
         </div>
       </div>
       <div>
-        <img class="icon-left" src="./assets/images/star.svg" alt="star">
-        <img class="icon-right" src="./assets/images/star.svg" alt="star">
+        <img class="banner-icon__left" src="./assets/images/star.svg" alt="star">
+        <img class="banner-icon__right" src="./assets/images/star.svg" alt="star">
       </div>
     </div>
   </section>
