fix empty line and naming BEM

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- SIGN UP START -->
   <div class="sign-up">
-    <p class="sign-up__text">Sign up and get 20% off to your first order. <a href="javascript:void(0)" class="sign-up__link link-secondary">Sign Up Now</a>
+    <p class="sign-up__text">Sign up and get 20% off to your first order.<a href="javascript:void(0)" class="sign-up__link link-secondary">Sign Up Now</a>
     </p>
     <img src="./assets/images/off.svg" alt="off">
   </div>
@@ -23,45 +23,45 @@
 
   <!-- HEADER START -->
   <header class="container">
-    <nav class="nav-bar">
-      <h1 class="nav-logo"><a class="link-primany" href="javascript:void(0)">SHOP.CO</a></h1>
-      <ul class="nav">
-        <li class="nav-item"><a class="link-primany" href="javascript:void(0)">Shop</a></li>
-        <li class="nav-item"><a class="link-primany" href="javascript:void(0)">On Sale</a></li>
-        <li class="nav-item"><a class="link-primany" href="javascript:void(0)">New Arrivals</a></li>
-        <li class="nav-item"><a class="link-primany" href="javascript:void(0)">Brand</a></li>
+    <nav class="header">
+      <h1 class="header__logo"><a class="link-primany" href="javascript:void(0)">SHOP.CO</a></h1>
+      <ul class="header__nav">
+        <li class="header__nav--item"><a class="link-primany" href="javascript:void(0)">Shop</a></li>
+        <li class="header__nav--item"><a class="link-primany" href="javascript:void(0)">On Sale</a></li>
+        <li class="header__nav--item"><a class="link-primany" href="javascript:void(0)">New Arrivals</a></li>
+        <li class="header__nav--item"><a class="link-primany" href="javascript:void(0)">Brand</a></li>
       </ul>
       <form>
-        <input class="nav-search" type="text" name="search" placeholder="Search for products...">
+        <input class="header__search" type="text" name="search" placeholder="Search for products...">
       </form>
       <div>
-        <a class="link-primany" href="javascript:void(0)"> <img src="./assets/images/cart.svg" alt="cart"></a>
-        <a class="link-primany" href="javascript:void(0)"> <img src="./assets/images/login.svg" alt="login"></a>
+        <a class="link-primany" href="javascript:void(0)"><img src="./assets/images/cart.svg" alt="cart"></a>
+        <a class="link-primany" href="javascript:void(0)"><img src="./assets/images/login.svg" alt="login"></a>
       </div>
     </nav>
   </header>
   <!-- HEADER END -->
 
   <!-- BANNER SECTION START -->
-  <section class="banner-section">
-    <div class="banner-item">
+  <section class="banner">
+    <div class="banner__item">
       <div>
         <h2 class="title primary-title">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
-        <p class="banner-item__content">Browse through our diverse range of meticulously crafted garments, designed to bring
+        <p class="banner__item--content">Browse through our diverse range of meticulously crafted garments, designed to bring
           out
           your individuality and cater to your sense of style</p>
         <button class="btn btn-primary">
           Shop now
         </button>
-        <div class="banner-item__info">
-          <p class="banner-item__info-num">200+ <span class="banner-item__info-desc">International Brands </span></p>
-          <p class="banner-item__info-num banner-item__info-box">2,000+ <span class="banner-item__info-desc"> High-Quality Products </span></p>
-          <p class="banner-item__info-num">30,000+ <span class="banner-item__info-desc">Happy Customers</span></p>
+        <div class="banner__item--info">
+          <p class="banner__item--num">200+<span class="banner__item--desc">International Brands</span></p>
+          <p class="banner__item--num banner__item--box">2,000+<span class="banner__item--desc">High-Quality Products</span></p>
+          <p class="banner__item--num">30,000+<span class="banner__item--desc">Happy Customers</span></p>
         </div>
       </div>
       <div>
-        <img class="banner-icon__left" src="./assets/images/star.svg" alt="star">
-        <img class="banner-icon__right" src="./assets/images/star.svg" alt="star">
+        <img class="banner__icon--left" src="./assets/images/star.svg" alt="star">
+        <img class="banner__icon--right" src="./assets/images/star.svg" alt="star">
       </div>
     </div>
   </section>
@@ -69,14 +69,14 @@
 
   <!-- BRAND SECTION START -->
 
-  <section class="brand-section">
+  <section class="brand">
     <div class="container">
-      <ul class="brand-bar">
-        <li class="brand-item"><img src="./assets/images/versace.svg" alt="versace"></li>
-        <li class="brand-item"><img src="./assets/images/zara.svg" alt="zara"></li>
-        <li class="brand-item"><img src="./assets/images/gucci.svg" alt="gucci"></li>
-        <li class="brand-item"><img src="./assets/images/prada.svg" alt="prada"></li>
-        <li class="brand-item"><img src="./assets/images/calvin.svg" alt="calvin"></li>
+      <ul class="brand__bar">
+        <li class="brand__bar--item "><img src="./assets/images/versace.svg" alt="versace"></li>
+        <li class="brand__bar--item "><img src="./assets/images/zara.svg" alt="zara"></li>
+        <li class="brand__bar--item "><img src="./assets/images/gucci.svg" alt="gucci"></li>
+        <li class="brand__bar--item "><img src="./assets/images/prada.svg" alt="prada"></li>
+        <li class="brand__bar--item "><img src="./assets/images/calvin.svg" alt="calvin"></li>
       </ul>
     </div>
   </section>
