use scss for project

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-
+  <div class="sign-up">
+    <p class="sign-up__desc">Sign up and get 20% off to your first order. <a class="sign-up__link" href="javascript:void(0)">Sign Up Now</a></p>
+    <img class="sign-up__icon" src="./assets/images/off.svg" alt="">
+  </div>
 </body>
 
 </html>
